@@ -34,6 +34,8 @@ they occurred between. For more detailed information see the
 
 @item Sawfish does now support theme-tarballs compressed with XZ or LZMA [Christopher Bratusek]
 
+@item 3 new sawfish-mmc based commands (maximize-unframe, maximize-reframe and rename-window) [Christopher Bratusek]
+
 @item 5 new move-cursor commands (move-cursor -northwest, -northeast, -southwest, -southeast), and move-cursor-center [Christopher Bratusek]
 
 @item Added fullscreen, fullscreen-xinerama and new-workspace matches [Jeremy Hankins]
