@@ -3,6 +3,8 @@
 
 	* configure.in: ... non-bash compatibility
 
+	* lisp/sawfish/wm/mmc/window-manipulation.jl: 3 new functions based on sawfish-mmc code (maximize-reframe, maximize-unframe, rename-window)
+
 2009-07-24  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/frames.jl: support theme-tarballs compressed with XZ and LZMA (needs librep 0.90.1)
 
